# writing-environment

./: .dockerignore  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/: release-notes.md
.github/workflows/: ci.yml  release.yml
deploy/linux-amd64/: Dockerfile  environment.example  writing-environment  writing-environment.desktop
deploy/pi/: Dockerfile  environment.example  writing-environment  writing-environment.desktop
deploy/pi-image/: Dockerfile  finalize-root-device.sh  image-entrypoint.sh
deploy/pi-image/config/: writing-environment.yaml
deploy/pi-image/settings-plugin/: Dockerfile  (+1 more)
docs/: architecture.md  development-plan.md  file-format.md  linux-amd64.md  pi-image.md  product-brief.md  raspberry-pi-4.md  releases.md  theme-system.md  unified-library.md
scripts/linux-amd64/: build-on-mac.sh  build-packages.sh  install.sh  lib.sh  uninstall.sh  update.sh
scripts/macos/: build.sh
scripts/pi/: appliance-update-README.txt  apply-appliance-update.sh  benchmark.sh  build-on-mac.sh  build-on-pi.sh  generate-test-library.sh  install-prebuilt.sh  install.sh  lib.sh  package-artifact.sh  uninstall.sh  update.sh
scripts/pi-image/: build-on-mac.sh  build-settings-plugin.sh  prepare-source.sh
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project_watch.rs  search_index.rs  sync.rs
src/lib/: library.ts  sync.ts  themes.ts
(+13 files in other folders)
