[package]
name = "writing-environment"
version = "0.4.0"
description = "A distraction-free, local-first Markdown writing environment"
authors = ["Writing Environment contributors"]
edition = "2021"

[lib]
name = "writing_environment_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tempfile = "3"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
wait-timeout = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "=0.3.2", features = ["NSUserDefaults", "NSString"] }
